# DreamServer

./: README.md  SPRINT_COMPLETE.md  dream-mobile.sh  install.ps1  install.sh
.github/workflows/: ai-issue-triage.yml  autonomous-code-scanner.yml  claude-review.yml  dashboard.yml  issue-to-pr.yml  lint-powershell.yml  lint-python.yml  lint-shell.yml  matrix-smoke.yml  nightly-code-review.yml  nightly-docs-update.yml  release-notes.yml  secret-scan.yml  test-linux.yml  type-check-python.yml  validate-compose.yml  validate-env.yml
dream-server/: .env.example  .env.schema.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.amd.yml  docker-compose.arc.yml  docker-compose.base.yml  docker-compose.nvidia.yml  dream-cli  dream-mobile.sh  get-dream-server.sh  install.sh
dream-server/.cache/: service-registry.mtimes
dream-server/config/: model-library.json
dream-server/docs/: DREAM-DOCTOR.md  INTEL-ARC-GUIDE.md  IOS-ASHELL-SHORTCUTS.md  IOS-ASHELL-WASM-RUNTIME.md  MOBILE-SHELL-QUICKSTART.md  PLATFORM-TRUTH-TABLE.md  SUPPORT-MATRIX.md  WINDOWS-QUICKSTART.md  WINDOWS-TROUBLESHOOTING-GUIDE.md
dream-server/installers/: common.sh
dream-server/installers/mobile/ios-wasm-runner/: CMakeLists.txt  __cpp_exception.S  dlfcn_stubs.cpp  main.cpp
dream-server/lib/: safe-env.sh  service-registry.sh
dream-server/opencode/: opencode-web.service
dream-server/scripts/: README.md  assign_gpus.py  bootstrap-upgrade.sh  dream-doctor.sh  dream-test-functional.sh  health-check.sh  linux-install-preflight.sh  migrate-config.sh  preflight-engine.sh  resolve-compose-stack.sh  select-model.py
dream-server/tests/: test-assign-gpus.py  test-doctor-command.sh  test-dream-doctor-install-diagnoses.sh  test-dream-doctor.sh  test-hardware-compatibility.sh  test-linux-opencode-path.sh  test-secret-security.sh  test-tier-map.sh  test-validate-env.sh  test-windows-compose-failure-report.sh  test-windows-doctor-command.sh
resources/: README.md
(+155 files in other folders)
